# tmr2013

./: readme.md
code/C++SourceCode/: CMakeLists.txt  CMakeLists.txt~  Hridd.cpp  Hridd.cpp~  Hridd.h  Hridd.h~  PioneerRobot.cpp  PioneerRobot.h  PortDevice.cpp  PortDevice.h  PortDevice.h~  Zxtar.cpp  Zxtar.h  Zxtar.h~  hridancedemo001.kdev4  main.cpp
code/C++SourceCode/.kdev4/: hridancedemo001.kdev4
code/dancedemoapp/: dancedemoapp  usbresetapplication
code/doxyfiles/: Doxyfile  doxygen_log.txt
code/doxyfiles/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _hridd_8cpp.html  _hridd_8cpp__incl.md5  _hridd_8cpp_source.html  _hridd_8h.html  _hridd_8h__dep__incl.map  _hridd_8h__dep__incl.md5  _hridd_8h__incl.map  _hridd_8h__incl.md5  _hridd_8h_source.html  _pioneer_robot_8cpp.html  _pioneer_robot_8cpp__incl.map  _pioneer_robot_8cpp__incl.md5  _pioneer_robot_8cpp_source.html  _pioneer_robot_8h.html  _pioneer_robot_8h__dep__incl.map  _pioneer_robot_8h__dep__incl.md5  _pioneer_robot_8h__incl.md5  _pioneer_robot_8h_source.html  _port_device_8cpp.html  _port_device_8cpp__incl.map  _port_device_8cpp__incl.md5  _port_device_8cpp_source.html  _port_device_8h.html  _port_device_8h.js  _port_device_8h__dep__incl.map  _port_device_8h__dep__incl.md5  _port_device_8h__incl.md5  _port_device_8h_source.html  _zxtar_8cpp.html  _zxtar_8cpp__incl.map  _zxtar_8cpp__incl.md5  _zxtar_8cpp_source.html  _zxtar_8h.html  (+127 more)
docs/latex/: HRIDD.tex  mainrep.bbl  mylit.bib
(+134 files in other folders)
